<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerjemahanActivity"
    android:orientation="vertical"
    android:weightSum="3" >

    <!-- Image Slider -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#bababa"
            android:contentDescription="@string/keterangan" />

        <ViewFlipper
            android:id="@+id/Flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg"
                android:scaleType="fitXY"
                android:contentDescription="@string/keterangan" />
        </ViewFlipper>
    </RelativeLayout>

    <!-- Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- Button Atas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/indonesia"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/txtIndonesia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:inputType="text"
                android:textSize="20sp"
                android:text=""/>
            <requestFocus>
            </requestFocus>
        </LinearLayout>

        <!-- Button Bawah -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btnTerjemah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/terjemahkan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/blue" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- Button Atas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/kutai"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtKutai"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Button Bawah -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/polandia"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp" />

            <EditText
                android:id="@+id/txtPolandia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>