<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <!-- Image Slider -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#bababa" />

        <ViewFlipper
            android:id="@+id/Flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/indo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/poland" />


        </ViewFlipper>
    </RelativeLayout>
    <!-- Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- Button Atas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/terjemahanView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:src="@drawable/conversation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/terjemahan"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/kosakata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:src="@drawable/language" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/kosakata"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tambahkata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:src="@drawable/tambah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tambah"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
        <!-- Button Bawah -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/bantuan"
                    android:layout_width="118dp"
                    android:layout_height="143dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:src="@drawable/info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/bantuan"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/developer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:src="@drawable/website" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/developer"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:src="@drawable/keluar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/keluar"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>